changed to use small canvas demo as template will build upon that - initial !!!

--- a/HyreVognAdministration/nbproject/project.properties
+++ b/HyreVognAdministration/nbproject/project.properties
@@ -17,8 +17,8 @@ deployment.jarurl=${dist.jar}
 deployment.method=NONE
 deployment.override.jarurl=false
 dist.dir=dist/${config.active}
-dist.jad=HyreVognAdministration.jad
-dist.jar=HyreVognAdministration.jar
+dist.jad=J2ME_Ex2_Canvas.jad
+dist.jar=J2ME_Ex2_Canvas.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
@@ -32,7 +32,7 @@ javac.deprecation=false
 javac.encoding=UTF-8
 javac.optimize=false
 javac.source=1.3
-javac.target=1.1
+javac.target=1.3
 javadoc.author=false
 javadoc.encoding=
 javadoc.noindex=false
@@ -51,10 +51,10 @@ manifest.file=manifest.mf
 manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: HelloMIDlet, , hello.HelloMIDlet\n
-manifest.others=MIDlet-Vendor: Vendor\nMIDlet-Name: HyreVognAdministration\nMIDlet-Version: 1.0\n
+manifest.midlets=MIDlet-1: Midlet, ,HyrevognAdministrationSystem.HAS\n
+manifest.others=MIDlet-Vendor: Johnny Serup\nMIDlet-Name: HASJava\nMIDlet-Version: 1.0\n
 manifest.pushregistry=
-name=HyreVognAdministration
+name=J2ME_Ex2_Canvas
 no.dependencies=false
 nokiaS80.application.icon=
 nsicom.application.monitorhost=
@@ -69,12 +69,12 @@ obfuscator.destjar=${build.dir}/obfuscated.jar
 obfuscator.srcjar=${build.dir}/before-obfuscation.jar
 platform.active=Series_40_6th_Edition_SDK___Feature_Pack_1
 platform.active.description=Series 40 6th Edition SDK , Feature Pack 1
-platform.apis=WMA-2.0,WMA-1.1,JSR82-1.1,JSR184-1.1,AMMS-1.1,JSR135-1.2,TOUCH-1.1,SATSA-APDU-1.0,SATSA-CRYPTO-1.0,OBEX-1.0,JSR172-1.1,JSR179-1.0,JSR75-1.0,JSR211-1.0,SVG-1.1,JSR205-2.0,NOKIAUI-1.1,MMAPI-1.0
-platform.bootclasspath=${platform.home}/lib/jsr135.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr177_crypto.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/jsr177_apdu.jar:${platform.home}/lib/jsr82.jar:${platform.home}/lib/jsr172.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/nokiaui.jar:${platform.home}/lib/touch.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/jsr205.jar:${platform.home}/lib/jsr120.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/cldc11.jar:${platform.home}/lib/midp20.jar
+platform.apis=AMMS-1.1,SATSA-APDU-1.0,JSR211-1.0,JSR75-1.0,JSR82-1.1,SATSA-CRYPTO-1.0,JSR172-1.1,JSR179-1.0,JSR184-1.1,MMAPI-1.0,NOKIAUI-1.1,SVG-1.1,TOUCH-1.1,WMA-1.1,WMA-2.0
+platform.bootclasspath=${platform.home}/lib/jsr135.jar:${platform.home}/lib/jsr226.jar:${platform.home}/lib/jsr177_crypto.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/jsr177_apdu.jar:${platform.home}/lib/jsr82.jar:${platform.home}/lib/jsr172.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/nokiaui.jar:${platform.home}/lib/touch.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/jsr205.jar:${platform.home}/lib/jsr120.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/cldc11.jar:${platform.home}/lib/midp21.jar
 platform.configuration=CLDC-1.1
 platform.device=Series_40_6th_Edition_SDK_Feature_Pack_1
 platform.fat.jar=true
-platform.profile=MIDP-2.0
+platform.profile=MIDP-2.1
 platform.trigger=CLDC
 platform.type=UEI-1.0.1
 preprocessed.dir=${build.dir}/preprocessed
@@ -86,7 +86,7 @@ ricoh.application.fax=
 ricoh.application.icon=
 ricoh.application.target-jar=
 ricoh.application.telephone=
-ricoh.application.uid=76341154
+ricoh.application.uid=68557261
 ricoh.application.version=
 ricoh.dalp.application-desc.auto-run=false
 ricoh.dalp.application-desc.energy-save=
@@ -130,7 +130,7 @@ semc.application.icon=
 semc.application.icon.count=
 semc.application.icon.splash=
 semc.application.icon.splash.installonly=false
-semc.application.uid=E5220279
+semc.application.uid=E0702065
 semc.certificate.path=
 semc.private.key.password=
 semc.private.key.path=
